added html for the app description part, set up rest of html, added css for body, h1, section, ul

--- a/proposal.html
+++ b/proposal.html
@@ -2,10 +2,48 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>adDTidjskjfds</title>
-    <link rel="stylesheet" href="css/style.css">
+    <meta name="author" content="Connor Lam">
+    <link rel="stylesheet" href="css/proposal.css">
+    <title>INFO 340 Proposal</title>
 </head>
 <body>
-    <h1>Hello, World!</h1>
+    <header>
+        <h1>INFO 340 Proposal</h1>
+    </header>
+
+    <section>
+        <h2>Problem Description</h2>
+        <!-- add sum stuff -->
+    </section>
+
+    <section>
+        <h2>Proposed Application</h2>
+        <p>
+            The users of our app will primarily be individuals who are interested in reducing their personal waste and making more environmentally conscious choices in their everyday lives. This could include students, families, or anyone trying to live more sustainably. The app will be designed to be easy to use and accessible, regardless of someone’s background or level of environmental knowledge. We also hope it can empower users from underrepresented or minority groups by giving them free, personalized tools to take action without needing expensive resources or advanced education in sustainability.
+        </p>
+
+        <p>
+            Our web app will be interactive and centered around helping users understand and track their personal waste habits. The core features include:
+        </p>
+        <ul>
+            <li><em>Interactive Charts and Graphs:</em> Visualize how the user's waste has changed over time with interactive elements like hovering and clicking to reveal more data.</li>
+            <li><em>Community Leaderboard:</em> Allow users to compare their waste reduction progress with others in a fun and engaging way.</li>
+            <li><em>Input Waste Feature:</em> Enable users to log items they've thrown away and categorize them (trash, compost, recycling).</li>
+            <li><em>Login Feature (Half Feature):</em> Users will be able to log into their own account, which stores their personalized stats over time.</li>
+        </ul>
+
+        <p>
+            Optional features we're considering include:
+        </p>
+        <ul>
+            <li>Weekly challenges (“produce zero plastic for a day”) to increase engagement.</li>
+            <li>Image uploads of compost bins or trash to promote real-world behavior.</li>
+            <li>Auto-suggestions based on item tags (“banana peel to compost") to help users log waste more accurately.</li>
+        </ul>
+
+        <p>
+            We don't intend to use an internal API, as all data will be stored and used in a meaningful way to help users visualize and reduce their waste. This app directly addresses the issue of low engagement in existing waste reduction tools by giving users an interactive and motivating way to build better habits.
+        </p>
+    </section>
 </body>
 </html>
