added problem description to html

--- a/proposal.html
+++ b/proposal.html
@@ -13,7 +13,13 @@
 
     <section>
         <h2>Problem Description</h2>
-        <!-- add sum stuff -->
+        <p>
+            Our society has a big waste management problem, as every day, people are generating a large amount of trash, which ends up in places that it shouldn’t be. Individuals aren’t aware of how much waste they are producing, where it could belong (compost, recycling, etc.), or how to reduce their waste in general. This lack of education and awareness makes it really hard for people to create habits which are sustainable and good for the environment. Currently apps such as Recycle Coach and WasteTracker are effective, but not personalized enough, tedious to use, and even costly in some situations. We want to create something that gives users personalized feedback and track long-term progress. 
+        </p>
+
+        <p>
+            The information technology problem is that these existing tools do not adequately empower individuals by delivering clear, personalized insights into their waste generation habits. There have been attempts to educate users, like general recycling information or cost savings, but they aren’t effective enough in engaging users towards a behavior and habit change. According to a 2025 pilot study in Germany, personalized data feedback can encourage more sustainable behavior <a href="https://www.frontiersin.org/journals/psychology/articles/10.3389/fpsyg.2024.1473953/full" target="_blank">(Höpfl et al., 2025)</a>. We want to address the lack of effective digital engagement, and create effective environmental education as an interactive piece of technology.
+        </p>
     </section>
 
     <section>
