add feature details and moved leaderboard to optional

--- a/proposal.html
+++ b/proposal.html
@@ -14,27 +14,26 @@
     <section>
         <h2>Problem Description</h2>
         <p>
-            Our society has a big waste management problem, as every day, people are generating a large amount of trash, which ends up in places that it shouldn’t be. Individuals aren’t aware of how much waste they are producing, where it could belong (compost, recycling, etc.), or how to reduce their waste in general. This lack of education and awareness makes it really hard for people to create habits which are sustainable and good for the environment. Currently apps such as Recycle Coach and WasteTracker are effective, but not personalized enough, tedious to use, and even costly in some situations. We want to create something that gives users personalized feedback and track long-term progress. 
+            Our society has a big waste management problem, as every day, people are generating a large amount of trash, which ends up in places that it shouldn't be. Individuals aren't aware of how much waste they are producing, where it could belong (compost, recycling, etc.), or how to reduce their waste in general. This lack of education and awareness makes it really hard for people to create habits which are sustainable and good for the environment. Currently apps such as Recycle Coach and WasteTracker are effective, but not personalized enough, tedious to use, and even costly in some situations. We want to create something that gives users personalized feedback and track long-term progress. 
         </p>
 
         <p>
-            The information technology problem is that these existing tools do not adequately empower individuals by delivering clear, personalized insights into their waste generation habits. There have been attempts to educate users, like general recycling information or cost savings, but they aren’t effective enough in engaging users towards a behavior and habit change. According to a 2025 pilot study in Germany, personalized data feedback can encourage more sustainable behavior <a href="https://www.frontiersin.org/journals/psychology/articles/10.3389/fpsyg.2024.1473953/full" target="_blank">(Höpfl et al., 2025)</a>. We want to address the lack of effective digital engagement, and create effective environmental education as an interactive piece of technology.
+            The information technology problem is that these existing tools do not adequately empower individuals by delivering clear, personalized insights into their waste generation habits. There have been attempts to educate users, like general recycling information or cost savings, but they aren't effective enough in engaging users towards a behavior and habit change. According to a 2025 pilot study in Germany, personalized data feedback can encourage more sustainable behavior <a href="https://www.frontiersin.org/journals/psychology/articles/10.3389/fpsyg.2024.1473953/full" target="_blank">(Höpfl et al., 2025)</a>. We want to address the lack of effective digital engagement, and create effective environmental education as an interactive piece of technology.
         </p>
     </section>
 
     <section>
         <h2>Proposed Application</h2>
         <p>
-            The users of our app will primarily be individuals who are interested in reducing their personal waste and making more environmentally conscious choices in their everyday lives. This could include students, families, or anyone trying to live more sustainably. The app will be designed to be easy to use and accessible, regardless of someone’s background or level of environmental knowledge. We also hope it can empower users from underrepresented or minority groups by giving them free, personalized tools to take action without needing expensive resources or advanced education in sustainability.
+            The users of our app will primarily be individuals who are interested in reducing their personal waste and making more environmentally conscious choices in their everyday lives. This could include students, families, or anyone trying to live more sustainably. The app will be designed to be easy to use and accessible, regardless of someone's background or level of environmental knowledge. We also hope it can empower users from underrepresented or minority groups by giving them free, personalized tools to take action without needing expensive resources or advanced education in sustainability.
         </p>
 
         <p>
             Our web app will be interactive and centered around helping users understand and track their personal waste habits. The core features include:
         </p>
         <ul>
+            <li><em>Input Waste Feature:</em> Enable users to log items they've thrown away by selecting from a pre-defined list. Each item will have a generalized weight, so users won't need to input data unless the item is not listed.</li>
             <li><em>Interactive Charts and Graphs:</em> Visualize how the user's waste has changed over time with interactive elements like hovering and clicking to reveal more data.</li>
-            <li><em>Community Leaderboard:</em> Allow users to compare their waste reduction progress with others in a fun and engaging way.</li>
-            <li><em>Input Waste Feature:</em> Enable users to log items they've thrown away and categorize them (trash, compost, recycling).</li>
             <li><em>Login Feature (Half Feature):</em> Users will be able to log into their own account, which stores their personalized stats over time.</li>
         </ul>
 
@@ -42,6 +41,7 @@
             Optional features we're considering include:
         </p>
         <ul>
+            <li><em>Community Leaderboard:</em> Allow users to compare their waste reduction progress with others in a fun and engaging way. The leaderboard ranks users by points earned for reaching preset goals and refreshes weekly.</li>
             <li>Weekly challenges (“produce zero plastic for a day”) to increase engagement.</li>
             <li>Image uploads of compost bins or trash to promote real-world behavior.</li>
             <li>Auto-suggestions based on item tags (“banana peel to compost") to help users log waste more accurately.</li>
