added names to proposal and authors in head, fixed required components

--- a/proposal.html
+++ b/proposal.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="author" content="Connor Lam">
+    <meta name="authors" content="Connor Lam, Justin Zhan, Yuhan Cao, Maya Odenheim">
     <link rel="stylesheet" href="css/proposal.css">
     <title>INFO 340 Proposal</title>
 </head>
 <body>
     <header>
         <h1>INFO 340 Proposal</h1>
+        <p class="centered-text">Connor Lam, Justin Zhan, Yuhan Cao, Maya Odenheim</p>
     </header>
 
     <section>
@@ -34,16 +35,16 @@
         <ul>
             <li><em>Input Waste Feature:</em> Enable users to log items they've thrown away by selecting from a pre-defined list. Each item will have a generalized weight, so users won't need to input data unless the item is not listed.</li>
             <li><em>Interactive Charts and Graphs:</em> Visualize how the user's waste has changed over time with interactive elements like hovering and clicking to reveal more data.</li>
+            <li><em>Community Leaderboard:</em> Allow users to compare their waste reduction progress with others in a fun and engaging way. The leaderboard ranks users by points earned for reaching preset goals and refreshes weekly.</li>
             <li><em>Login Feature (Half Feature):</em> Users will be able to log into their own account, which stores their personalized stats over time.</li>
+            <li>Image uploads of compost bins or trash to promote real-world behavior.</li>
         </ul>
 
         <p>
             Optional features we're considering include:
         </p>
         <ul>
-            <li><em>Community Leaderboard:</em> Allow users to compare their waste reduction progress with others in a fun and engaging way. The leaderboard ranks users by points earned for reaching preset goals and refreshes weekly.</li>
             <li>Weekly challenges (“produce zero plastic for a day”) to increase engagement.</li>
-            <li>Image uploads of compost bins or trash to promote real-world behavior.</li>
             <li>Auto-suggestions based on item tags (“banana peel to compost") to help users log waste more accurately.</li>
         </ul>
 
