added navbar to all pages with css styling

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -9,6 +9,18 @@
   <title>Leaderboard | EcoTrack</title>
 </head>
 <body>
+  <nav>
+    <div class="navdiv">
+      <div class="name">EcoTrack</div>
+      <ul id="navLinks">
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./input-log.html">Input Waste</a></li>
+        <li><a href="./leaderboard.html">Leaderboard</a></li>
+        <li><a href="./visualizations.html">Progress</a></li>
+      </ul>
+      <button class="hamburger" aria-label="Menu" onclick="toggleMenu()">☰</button>
+    </div>
+  </nav>
   <header>
     <h1>🌱 Waste Reduction Leaderboard</h1>
     <p>Track your progress and compete with others weekly!</p>
