--- a/visualizations.html
+++ b/visualizations.html
@@ -7,13 +7,17 @@
   <meta name="description" content="INFO 340 Project">
   <link rel="stylesheet" href="css/leaderboard.css">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="js/all.js" defer></script>
   <script src="js/visualizations.js" defer></script>
   <title>Visualizer | EcoTrack</title>
 </head>
 <body>
   <nav>
     <div class="navdiv">
-      <div class="name">EcoTrack</div>
+      <div class="name">
+        <img src="./img/Screenshot 2025-04-22 at 11.02.15 AM.png" alt="Waste icon" class="logo-icon">
+        EcoTrack
+      </div>
       <ul id="navLinks">
         <li><a href="./index.html">Home</a></li>
         <li><a href="./input-log.html">Input Waste</a></li>
@@ -24,7 +28,7 @@
     </div>
   </nav>
   <header>
-    <h1>🌱 Waste Reduction Leaderboard</h1>
+    <h1>🌱 Waste Reduction Progress</h1>
     <p>Track your progress and compete with others weekly!</p>
   </header>
   <main>
