--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
   <meta name="authors" content="Connor Lam, Justin Zhan, Yuhan Cao, Maya Odenheim">
   <meta name="description" content="INFO 340 Project">
   <link rel="stylesheet" href="css/leaderboard.css">
+  <script src="js/all.js" defer></script>
   <title>Input Log | EcoTrack</title>
 </head>
 <body>
   <nav>
     <div class="navdiv">
-      <div class="name">EcoTrack</div>
+      <div class="name">
+        <img src="./img/Screenshot 2025-04-22 at 11.02.15 AM.png" alt="Waste icon" class="logo-icon">
+        EcoTrack
+      </div>
       <ul id="navLinks">
         <li><a href="./index.html">Home</a></li>
         <li><a href="./input-log.html">Input Waste</a></li>
@@ -22,7 +26,7 @@
     </div>
   </nav>
   <header>
-    <h1>🌱 Waste Reduction Input Log</h1>
+    <h1>🌱 Waste Reduction Home</h1>
     <p>Log your waste to reduce your impact and gain points!</p>
   </header>
 
