--- a/leaderboard.html
+++ b/leaderboard.html
@@ -6,12 +6,16 @@
   <meta name="authors" content="Connor Lam, Justin Zhan, Yuhan Cao, Maya Odenheim">
   <meta description="project" content="INFO 340">
   <link rel="stylesheet" href="css/leaderboard.css">
+  <script src="js/all.js" defer></script>
   <title>Leaderboard | EcoTrack</title>
 </head>
 <body>
   <nav>
     <div class="navdiv">
-      <div class="name">EcoTrack</div>
+      <div class="name">
+        <img src="./img/Screenshot 2025-04-22 at 11.02.15 AM.png" alt="Waste icon" class="logo-icon">
+        EcoTrack
+      </div>
       <ul id="navLinks">
         <li><a href="./index.html">Home</a></li>
         <li><a href="./input-log.html">Input Waste</a></li>
