added some images to visualizations page with styling

--- a/visualizations.html
+++ b/visualizations.html
@@ -42,16 +42,19 @@
         </div>
         <div class="stat-card">
           <h3>Recycled</h3>
+          <img src="img/recycle.png" alt="Recycle icon" class="img">
           <div class="stat-value">42%</div>
           <p>of total waste</p>
         </div>
         <div class="stat-card">
           <h3>Composted</h3>
+          <img src="img/compost.png" alt="Compost icon" class="img">
           <div class="stat-value">35%</div>
           <p>of total waste</p>
         </div>
         <div class="stat-card">
           <h3>Landfill</h3>
+          <img src="img/landfill.png" alt="Landfill icon" class="img">
           <div class="stat-value">23%</div>
           <p>of total waste</p>
         </div>
