--- a/leaderboard.html
+++ b/leaderboard.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="authors" content="Connor Lam, Justin Zhan, Yuhan Cao, Maya Odenheim">
   <meta description="project" content="INFO 340">
-  <link rel="stylesheet" href="css/leaderboard.css">
+  <link rel="stylesheet" href="css/style.css">
   <script src="js/all.js" defer></script>
   <title>Leaderboard | EcoTrack</title>
 </head>
