--- a/visualizations.html
+++ b/visualizations.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="authors" content="Connor Lam, Justin Zhan, Yuhan Cao, Maya Odenheim">
   <meta name="description" content="INFO 340 Project">
-  <link rel="stylesheet" href="css/leaderboard.css">
+  <link rel="stylesheet" href="css/style.css">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="js/all.js" defer></script>
   <script src="js/visualizations.js" defer></script>
