--- a/index.html
+++ b/index.html
@@ -1,41 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="authors" content="Connor Lam, Justin Zhan, Yuhan Cao, Maya Odenheim">
-  <meta name="description" content="INFO 340 Project">
-  <link rel="stylesheet" href="css/style.css">
-  <script src="js/all.js" defer></script>
-  <title>Input Log | EcoTrack</title>
-</head>
-<body>
-  <nav>
-    <div class="navdiv">
-      <div class="name">
-        <img src="./img/Screenshot 2025-04-22 at 11.02.15 AM.png" alt="Waste icon" class="logo-icon">
-        EcoTrack
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="authors"
+      content="Connor Lam, Justin Zhan, Yuhan Cao, Maya Odenheim"
+    />
+    <meta name="description" content="INFO 340 Project" />
+    <link rel="stylesheet" href="css/style_index.css" />
+    <script src="js/all.js" defer></script>
+    <title>Input Log | EcoTrack</title>
+  </head>
+  <body>
+    <nav>
+      <div class="navdiv">
+        <div class="name">
+          <img
+            src="./img/Screenshot 2025-04-22 at 11.02.15 AM.png"
+            alt="Waste icon"
+            class="logo-icon"
+          />
+          EcoTrack
+        </div>
+        <ul id="navLinks">
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./input-log.html">Input Waste</a></li>
+          <li><a href="./leaderboard.html">Leaderboard</a></li>
+          <li><a href="./visualizations.html">Progress</a></li>
+        </ul>
+        <button class="hamburger" aria-label="Menu" onclick="toggleMenu()">
+          ☰
+        </button>
       </div>
-      <ul id="navLinks">
-        <li><a href="./index.html">Home</a></li>
-        <li><a href="./input-log.html">Input Waste</a></li>
-        <li><a href="./leaderboard.html">Leaderboard</a></li>
-        <li><a href="./visualizations.html">Progress</a></li>
-      </ul>
-      <button class="hamburger" aria-label="Menu" onclick="toggleMenu()">☰</button>
-    </div>
-  </nav>
-  <header>
-    <h1>🌱 Waste Reduction Home</h1>
-    <p>Log your waste to reduce your impact and gain points!</p>
-  </header>
+    </nav>
 
-  <main>
-    
-  </main>
+    <header>
+      <h1>🌱 Waste Reduction Home</h1>
+      <p>Log your waste to reduce your impact and gain points!</p>
+    </header>
 
-  <footer>
-    <p>🌍 Keep reducing waste and climb the leaderboard!</p>
-  </footer>
-</body>
+    <main>
+      <section class="features">
+        <button class="feature-button" onclick="location.href='input-log.html'">
+          🗑️ Input Waste Feature<br />
+          <span>Log your daily waste from a pre-defined list!</span>
+        </button>
+
+        <button
+          class="feature-button"
+          onclick="location.href='visualizations.html'"
+        >
+          📊 Interactive Charts and Graphs<br />
+          <span>Track and explore your waste habits over time.</span>
+        </button>
+
+        <button
+          class="feature-button"
+          onclick="location.href='leaderboard.html'"
+        >
+          🏆 Community Leaderboard<br />
+          <span>See how your progress stacks up weekly!</span>
+        </button>
+      </section>
+    </main>
+
+    <footer>
+      <p>🌍 Keep reducing waste and climb the leaderboard!</p>
+    </footer>
+  </body>
 </html>
