--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <li><a href="./input-log.html">Input Waste</a></li>
         <li><a href="./leaderboard.html">Leaderboard</a></li>
         <li><a href="./visualizations.html">Progress</a></li>
+        <li><a href="./login.html">Log In</a></li>
       </ul>
       <button class="hamburger" aria-label="Menu" onclick="toggleMenu()">☰</button>
     </div>
