--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div>
       <ul id="navLinks">
         <li><a href="./index.html">Home</a></li>
-        <li><a href="./input-log.html">Input Waste</a></li>
+        <li><a href="./log.html">Input Waste</a></li>
         <li><a href="./leaderboard.html">Leaderboard</a></li>
         <li><a href="./visualizations.html">Progress</a></li>
         <li><a href="./login.html">Log In</a></li>
