renamed icon image and updated file pathways to it

--- a/visualizations.html
+++ b/visualizations.html
@@ -15,7 +15,7 @@
   <nav>
     <div class="navdiv">
       <div class="name">
-        <img src="./img/Screenshot 2025-04-22 at 11.02.15 AM.png" alt="Waste icon" class="logo-icon">
+        <img src="./img/ecotrack-icon.png" alt="EcoTrack icon" class="logo-icon">
         EcoTrack
       </div>
       <ul id="navLinks">
