--- a/log.html
+++ b/log.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta name="description" content="Waste Log History | EcoTrack">
-  <link rel="stylesheet" href="css/style.css" />
-  <title>Waste Log History | EcoTrack</title>
-</head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="authors" content="Connor Lam, Justin Zhan, Yuhan Cao, Maya Odenheim">
+    <meta description="project" content="INFO 340">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/all.js" defer></script>
+    <title>Leaderboard | EcoTrack</title>
+    </head>
 <body>
   <!-- Navigation -->
   <nav>
     <div class="navdiv">
       <div class="name">
-        <img src="./img/Screenshot 2025-04-22 at 11.02.15 AM.png" alt="Waste icon" class="logo-icon">
+        <img src="./img/ecotrack-icon.png" alt="EcoTrack icon" class="logo-icon">
         EcoTrack
       </div>
       <ul id="navLinks">
