fixed overlapping css class names

--- a/log.html
+++ b/log.html
@@ -36,7 +36,7 @@
   <main>
     <!-- Streak + Calendar -->
     <div class="stats-wrapper">
-      <div class="stats-summary">
+      <div class="log-stats-summary">
         <p><strong>Total entries this week:</strong> 3 logs</p>
         <p><strong>You're on a 1-day streak! 🌟</strong></p>
       </div>
