--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 
   <main >
     <section class="features">
-      <button class="feature-button" onclick="location.href='input-log.html'">
-        🗑️ Input Waste Feature<br />
-        <span>Log your daily waste from a pre-defined list!</span>
+      <button class="feature-button" onclick="location.href='log.html'">
+        🗑️ Log and Track Your Waste<br />
+        <span>Log your waste and see what you've previously logged.</span>
       </button>
 
       <button
