"Log Waste" instead of "Input Waste" lol

--- a/log.html
+++ b/log.html
@@ -19,7 +19,7 @@
       </div>
       <ul id="navLinks">
         <li><a href="./index.html">Home</a></li>
-        <li><a href="./log.html">Input Waste</a></li>
+        <li><a href="./log.html">Log Waste</a></li>
         <li><a href="./leaderboard.html">Leaderboard</a></li>
         <li><a href="./visualizations.html">Progress</a></li>
       </ul>
