--- a/signup.html
+++ b/signup.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="authors" content="Connor Lam, Justin Zhan, Yuhan Cao, Maya Odenheim">
     <meta name="description" content="INFO 340 Project">
+    <link rel="icon" href="./img/ecotrack-icon.png" type="image/png">
+
     <title>Sign Up | EcoTrack</title>
 </head>
 <body>
