--- a/visualizations.html
+++ b/visualizations.html
@@ -9,6 +9,7 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="js/all.js" defer></script>
   <script src="js/visualizations.js" defer></script>
+  <link rel="icon" href="./img/ecotrack-icon.png" type="image/png">
   <title>Visualizer | EcoTrack</title>
 </head>
 <body>
