--- a/input-log.html
+++ b/input-log.html
@@ -7,6 +7,7 @@
   <meta name="description" content="INFO 340 Project">
   <link rel="stylesheet" href="css/style.css">
   <script src="js/all.js" defer></script>
+  <link rel="icon" href="./img/ecotrack-icon.png" type="image/png">
   <title>Input Log | EcoTrack</title>
 </head>
 <body>
