--- a/leaderboard.html
+++ b/leaderboard.html
@@ -7,6 +7,7 @@
   <meta description="project" content="INFO 340">
   <link rel="stylesheet" href="css/style.css">
   <script src="js/all.js" defer></script>
+  <link rel="icon" href="./img/ecotrack-icon.png" type="image/png">
   <title>Leaderboard | EcoTrack</title>
 </head>
 <body>
