--- a/proposal.html
+++ b/proposal.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="authors" content="Connor Lam, Justin Zhan, Yuhan Cao, Maya Odenheim">
     <link rel="stylesheet" href="css/proposal.css">
+    <link rel="icon" href="./img/ecotrack-icon.png" type="image/png">
     <title>INFO 340 Proposal</title>
 </head>
 <body>
