edit buttons navigate to input form now

--- a/log.html
+++ b/log.html
@@ -62,7 +62,7 @@
         <p class="summary-line">Medium, recycled, threw away cans at recycling center</p>
       </div>
       <div class="card-actions">
-        <button class="edit-btn">✏️ Edit</button>
+        <button class="edit-btn" onclick="window.location.href='input-log.html'">✏️ Edit</button>
         <button class="delete-btn" onclick="this.closest('.card-entry').remove()">🗑️ Delete</button>
       </div>
     </div>
@@ -74,7 +74,7 @@
         <p class="summary-line">Medium, composted, banana peels, coffee grounds</p>
       </div>
       <div class="card-actions">
-        <button class="edit-btn">✏️ Edit</button>
+        <button class="edit-btn" onclick="window.location.href='input-log.html'">✏️ Edit</button>
         <button class="delete-btn" onclick="this.closest('.card-entry').remove()">🗑️ Delete</button>
       </div>
     </div>
@@ -86,7 +86,7 @@
         <p class="summary-line">Small, reused, turned old flyers into scrap paper</p>
       </div>
       <div class="card-actions">
-        <button class="edit-btn">✏️ Edit</button>
+        <button class="edit-btn" onclick="window.location.href='input-log.html'">✏️ Edit</button>
         <button class="delete-btn" onclick="this.closest('.card-entry').remove()">🗑️ Delete</button>
       </div>
     </div>
