--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/ecotrack-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="authors" content="Connor Lam, Justin Zhan, Yuhan Cao, Maya Odenheim">
     <title>Vite + React</title>
