--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/ecotrack-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="authors" content="Connor Lam, Justin Zhan, Yuhan Cao, Maya Odenheim">
-    <title>Vite + React</title>
+    <title>EcoTrack</title>
   </head>
   <body>
     <div id="root"></div>
